fixed bug with no images for no admin user, fixed bug with css (overflow-x was none), add time in ms in get restaurants servlet

--- a/war/stationary.css
+++ b/war/stationary.css
@@ -343,7 +343,7 @@
 	margin-right: 10px;
 	padding-left: 15px;
 	overflow: auto;
-	overflow-x: none;
+	overflow-x: hidden;
 	overflow-y: auto;
 	white-space: nowrap;
 	font-family: Arial, Helvetica, sans-serif;
